<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pagamentoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brick_red"
    tools:context=".activities.PagamentoActivity">


    <TextView
        android:id="@+id/titoloPagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/calistoga"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/titolo_pagamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/numeroCarta"
        style="@style/hintCenterInputLeft"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@id/titoloPagamento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints="creditCardNumber"
        android:background="@drawable/rectangle_edit_text"
        android:hint="@string/credit_card_name"
        android:inputType="number"
        android:maxLength="19"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/cvvCarta"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignTop="@id/meseScadenza"
        android:layout_alignEnd="@id/numeroCarta"
        android:background="@drawable/rectangle_edit_text"
        android:hint="@string/cvv"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/nomeProprietarioCarta"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@id/numeroCarta"
        android:layout_alignStart="@id/meseScadenza"
        android:layout_marginTop="10sp"
        android:background="@drawable/rectangle_edit_text"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <EditText
        android:id="@+id/cognomeProprietarioCarta"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@id/nomeProprietarioCarta"
        android:layout_alignStart="@id/nomeProprietarioCarta"
        android:layout_marginTop="10sp"
        android:background="@drawable/rectangle_edit_text"
        android:hint="Cognome"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pulsanteConfermaDati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvvCarta"
        android:layout_alignEnd="@id/cognomeProprietarioCarta"
        android:layout_marginTop="10sp"
        android:clickable="true"
        app:srcCompat="@drawable/ok" />


    <Spinner
        android:id="@+id/meseScadenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cognomeProprietarioCarta"
        android:layout_alignStart="@id/numeroCarta"
        android:layout_marginTop="40sp"
        android:background="@drawable/rectangle_spinner"
        android:prompt="@string/mesi_spinner"
        android:spinnerMode="dropdown" />


    <Spinner
        android:id="@+id/annoScadenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cognomeProprietarioCarta"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="40sp"
        android:layout_toEndOf="@id/meseScadenza"
        android:prompt="@string/anni_spinner"
        android:background="@drawable/rectangle_spinner"
        android:spinnerMode="dropdown" />


    <TextView
        android:id="@+id/scadenza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cognomeProprietarioCarta"
        android:layout_alignStart="@id/numeroCarta"
        android:layout_marginTop="10sp"
        android:text="Scadenza"
        android:textColor="@color/white" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/impostazionePulsantePagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:layout_alignTop="@id/pulsanteConfermaDati"
        android:layout_alignStart="@id/meseScadenza"/>
</RelativeLayout>
