<resources>
    <string name="app_name">DrinkProject</string>
    <string name="login_activity_enter_username_and_password">Per piacere inserisci username e password o la tua impronta</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_log_in_button">Log in con impronta</string>
    <string name="login_activity_welcome">Benvenuto</string>
    <string name="login_activity_username">Username</string>
    <string name="title_activity_drink">DrinkActivity</string>
    <string name="action_settings">Impostazioni</string>
    <string name="drink_view_flavour">Gusto</string>
    <string name="drink_view_recipe">Ricetta</string>
    <string name="drink_view_drink_name">Nome</string>
    <string name="search_hint">Cerca Ingredienti</string>
    <string name="register_activity_register">Registrati con username e password</string>
    <string name="register_activity_insert_new_username">Insert new username</string>
    <string name="register_activity_insert_new_password">Insert new password</string>
    <string name="login_activity_register_button">Registrati</string>
    <string name="login_activity_register_button_with_fingerprint">With fingerprint</string>
    <string name="login_activity_message_register">Sei nuovo qui? Registrati!</string>
    <string name="register_activity_fingerprint_text">O usa la tua impronta</string>
    <string name="register_activity_fingerprint_button">Impronta</string>
    <string name="order_summary_activity_order_summary">Carrello</string>
    <string name="drink_activity_select_your_favourite_drinks">Seleziona i tuoi drink</string>
    <string name="order_summary_activity_text_view_credit_card_password">Inserisci la password della tua carta di credito</string>
    <string name="registration_not_done_text">Registration not done</string>
    <string name="registration_done_text">Registration done</string>
    <string name="payment_not_made_text">Payment not made</string>
    <string name="payment_made_text">Payment made</string>
    <string name="drimk_view_summary_tip">TOT:</string>
    <string name="registerNameHint">Nome</string>
    <string name="registerSurnameHint">Cognome</string>
    <string name="image_of_the_drink">Immagine del drink</string>
    <string name="payment_button">button for payment</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="credit_card_name">Numero Carta</string>
    <string name="cvv">CVV</string>
    <string name="card_expiration">Scadenza carta</string>
    <string name="name">Nome</string>
    <string name="mesi_spinner">Seleziona il mese\n</string>
    <string name="anni_spinner">Seleziona l\'anno\n</string>
    <string name="switch_change_modality">Attiva la modalità colori ad alto contrasto</string>
    <string name="titolo_pagamento">Per piacere inserisci i dati della tua carta di credito</string>
</resources>